--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@ant-design/colors": "^6.0.0",
     "@ant-design/icons-vue": "^6.0.1",
+    "@faker-js/faker": "^9.1.0",
     "@iconify/iconify": "^2.0.4",
     "@vueuse/core": "^6.7.4",
     "@vueuse/shared": "^6.7.4",
@@ -42,7 +43,7 @@
     "ant-design-vue": "2.2.8",
     "axios": "^0.24.0",
     "crypto-js": "^4.1.1",
-    "echarts": "^5.2.2",
+    "echarts": "^5.5.1",
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "moment": "^2.29.1",
@@ -56,7 +57,8 @@
     "vue": "^3.2.21",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.12",
-    "vue-types": "^4.1.1"
+    "vue-types": "^4.1.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^14.1.0",
@@ -133,7 +135,6 @@
     "vue-tsc": "^0.28.10"
   },
   "resolutions": {
-    "//": "Used to install imagemin dependencies, because imagemin may not be installed in China. If it is abroad, you can delete it",
     "bin-wrapper": "npm:bin-wrapper-china",
     "rollup": "^2.56.3"
   },
