--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ant-design-vue": "2.2.8",
     "axios": "^0.24.0",
     "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
